--- a/package.json
+++ b/package.json
@@ -5,50 +5,70 @@
   "version": "0.1.0",
   "author": "Sam",
   "dependencies": {
+    "dayjs": "1.10.7",
     "gatsby": "^4.12.1",
+    "gatsby-image": "^3.11.0",
+    "gatsby-plugin-alias-imports": "^1.0.5",
+    "gatsby-plugin-dark-mode": "^1.1.2",
     "gatsby-plugin-gatsby-cloud": "^4.12.1",
     "gatsby-plugin-image": "^2.12.1",
     "gatsby-plugin-manifest": "^4.12.1",
     "gatsby-plugin-offline": "^5.12.1",
     "gatsby-plugin-react-helmet": "^5.12.1",
     "gatsby-plugin-sharp": "^4.12.1",
+    "gatsby-plugin-typography": "^4.12.1",
+    "gatsby-remark-autolink-headers": "^5.12.1",
+    "gatsby-remark-code-titles": "^1.1.0",
+    "gatsby-remark-copy-linked-files": "^5.12.1",
+    "gatsby-remark-embed-video": "^3.1.1",
+    "gatsby-remark-external-links": "^0.0.4",
+    "gatsby-remark-images": "^6.12.1",
+    "gatsby-remark-prismjs": "^6.12.1",
+    "gatsby-remark-responsive-iframe": "^5.12.1",
+    "gatsby-remark-smartypants": "^5.12.1",
     "gatsby-source-filesystem": "^4.12.1",
+    "gatsby-transformer-remark": "^5.12.1",
     "gatsby-transformer-sharp": "^4.12.1",
-    "prop-types": "^15.8.1",
+    "prismjs": "^1.25.0",
+    "qs": "6.10.1",
+    "ramda": "0.27.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-typography": "^0.16.20",
-    "typography": "^0.16.21",
-    "prismjs": "^1.25.0",
-    "qs": "6.10.1",
-    "ramda": "0.27.1",
-    "dayjs": "1.10.7"
+    "typography": "^0.16.21"
   },
   "devDependencies": {
-    "prettier": "^2.6.2",
+    "@commitlint/cli": "^14.1.0",
+    "@commitlint/config-conventional": "^14.1.0",
+    "@spotify/eslint-config-base": "^13.0.1",
+    "@spotify/eslint-config-react": "^13.0.1",
     "@types/node": "14.18.1",
+    "@types/qs": "6.9.7",
+    "@types/ramda": "0.27.48",
     "@types/react": "17.0.38",
     "@types/react-dom": "17.0.11",
     "@types/react-helmet": "6.1.5",
+    "@types/styled-components": "^5.1.25",
     "@types/typography": "0.16.4",
     "@typescript-eslint/eslint-plugin": "5.10.0",
-    "eslint-plugin-import": "2.25.3",
     "@typescript-eslint/parser": "5.10.0",
+    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.5.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-loader": "4.0.2",
+    "eslint-plugin-import": "2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-react": "7.27.1",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "gatsby-plugin-styled-components": "^5.12.1",
     "husky": "^7.0.0",
     "lint-staged": "^12.0.1",
+    "prettier": "^2.6.2",
+    "styled-components": "^5.3.5",
     "ts-node": "10.4.0",
-    "typescript": "4.4.4",
-    "@commitlint/cli": "^14.1.0",
-    "@commitlint/config-conventional": "^14.1.0",
-    "@types/qs": "6.9.7",
-    "@types/ramda": "0.27.48"
+    "typescript": "4.4.4"
   },
   "keywords": [
     "gatsby",
@@ -59,13 +79,12 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "dev": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "start": "gatsby develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "lint-staged": "lint-staged",
-    "eslint": "eslint . --ext .ts .js",
+    "eslint": "eslint . --ext .tsx --fix",
     "postinstall": "husky install",
     "prepare": "husky install"
   },
