--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,13 +14,17 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "experimentalDecorators": true,
+    "baseUrl": ".",
     "noUnusedLocals": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noEmit": true,
     "typeRoots": ["node_modules/@types", "./src/typings"],
     "jsx": "react",
-    "downlevelIteration": true
+    "downlevelIteration": true,
+    "paths": {
+      "@*": ["src/*"]
+    }
   },
   "include": ["src/**/*"]
 }
