feat: add 1 post and basic functionality

--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,4 +1,4 @@
 {
-  "*.{ts,js}": ["prettier --write", "eslint --fix"],
+  "*.{tsx,jsx,ts,js}": ["prettier --write", "eslint --fix"],
   "*.json": ["prettier --write"]
 }
