--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "version": "0.1.0",
   "author": "Sam",
   "dependencies": {
-    "dayjs": "1.10.7",
+    "@arco-design/web-react": "^2.32.1",
+    "dayjs": "^1.11.1",
+    "enum-values": "^1.2.1",
     "gatsby": "^4.12.1",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-alias-imports": "^1.0.5",
@@ -17,6 +19,7 @@
     "gatsby-plugin-react-helmet": "^5.12.1",
     "gatsby-plugin-sharp": "^4.12.1",
     "gatsby-plugin-typography": "^4.12.1",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-remark-autolink-headers": "^5.12.1",
     "gatsby-remark-code-titles": "^1.1.0",
     "gatsby-remark-copy-linked-files": "^5.12.1",
@@ -29,14 +32,18 @@
     "gatsby-source-filesystem": "^4.12.1",
     "gatsby-transformer-remark": "^5.12.1",
     "gatsby-transformer-sharp": "^4.12.1",
+    "i18next": "^21.6.16",
     "prismjs": "^1.25.0",
     "qs": "6.10.1",
     "ramda": "0.27.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-i18next": "^11.16.7",
     "react-typography": "^0.16.20",
-    "typography": "^0.16.21"
+    "react-use": "^17.3.2",
+    "typography": "^0.16.21",
+    "typography-theme-wordpress-2016": "^0.16.19"
   },
   "devDependencies": {
     "@commitlint/cli": "^14.1.0",
@@ -62,10 +69,13 @@
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-react": "7.27.1",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "execa": "^6.1.0",
     "gatsby-plugin-styled-components": "^5.12.1",
     "husky": "^7.0.0",
+    "lighthousebot": "^1.0.0",
     "lint-staged": "^12.0.1",
     "prettier": "^2.6.2",
+    "signale": "^1.4.0",
     "styled-components": "^5.3.5",
     "ts-node": "10.4.0",
     "typescript": "4.4.4"
@@ -79,15 +89,17 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "dev": "gatsby develop",
+    "dev": "gatsby clean && gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "serve": "gatsby serve",
-    "pre-commit":"tsc && yarn lint-staged",
+    "pre-commit": "tsc && yarn lint-staged",
     "clean": "gatsby clean",
     "lint-staged": "lint-staged",
     "eslint": "eslint . --ext .tsx --fix",
     "postinstall": "husky install",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "lh": "lighthousebot",
+    "preoptimize:images": "node ./src/scripts/preoptimize.js"
   },
   "repository": {
     "type": "git",
