--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@arco-design/web-react": "^2.32.1",
     "dayjs": "^1.11.1",
     "enum-values": "^1.2.1",
-    "gatsby": "^4.12.1",
+    "gatsby": "4.12.1",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-dark-mode": "^1.1.2",
@@ -61,6 +61,7 @@
     "@typescript-eslint/eslint-plugin": "5.10.0",
     "@typescript-eslint/parser": "5.10.0",
     "babel-plugin-styled-components": "^2.0.7",
+    "cross-env": "^7.0.3",
     "eslint": "8.5.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-loader": "4.0.2",
@@ -88,8 +89,8 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
-    "dev": "gatsby clean && gatsby develop",
+    "build": "cross-env GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages",
+    "dev": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "serve": "gatsby serve",
     "pre-commit": "tsc && yarn lint-staged",
