--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "noUnusedLocals": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
+    "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "typeRoots": ["node_modules/@types", "./src/typings"],
     "jsx": "react",
